# OptimumSearchSchemes

./: .gitmodules
BenchmarkCode/: CMakeLists.txt  README.md  benchmark.cpp  build_index.cpp  common.h  detailed_benchmark.cpp  paper_optimum_schemes.h
MIPCode/: ReadMe (1).html  ReadMe (1).md  ReadMe.html  ReadMe.md  output_for_some_optimal_runs.txt  parameters_used_for_runs.txt
MIPCode/application/: parameters.txt
MIPCode/application/output/: output.txt
MIPCode/source/: commonObjects.cpp  commonObjects.h  main.cpp  master.cpp  master.h  parameters.txt
MIPCode/source/output/: output.txt
MIP_WithMinK/: Makefile  ReadMe.md  ReadMe.xlsx  commonObjects.cpp  commonObjects.h  input.txt  main.cpp  master.cpp  master.h
MIP_WithMinK/output/: outX.txt
code/: CMakeLists.txt  README.md  benchmark_create_index.cpp  common.h  count_edges.cpp  randomizeN.cpp
